--- a/MyGoogleSinginButtonExample/Base.lproj/Main.storyboard
+++ b/MyGoogleSinginButtonExample/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="E1D-gp-3ba">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sign in-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="MyGoogleSinginButtonExample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,102 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E6L-4r-jjJ" customClass="GIDSignInButton">
+                                <rect key="frame" x="192" y="265" width="216" height="69"/>
+                                <color key="backgroundColor" red="1" green="0.24461866830000001" blue="0.1296188201" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="69" id="Sic-Hr-P4V"/>
+                                    <constraint firstAttribute="width" constant="216" id="X26-CW-Yxo"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="E6L-4r-jjJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bzj-eJ-D2H"/>
+                            <constraint firstItem="E6L-4r-jjJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="JFQ-T0-Osx"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Sign in" id="MzC-wM-om4"/>
+                    <connections>
+                        <outlet property="signInButton" destination="E6L-4r-jjJ" id="hj3-cq-5hA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1512" y="1015"/>
+        </scene>
+        <!--Protected page-->
+        <scene sceneID="B9T-iw-6fx">
+            <objects>
+                <viewController storyboardIdentifier="ProtectedPageViewController" id="AT8-YX-MiP" customClass="ProtectedPageViewController" customModule="MyGoogleSinginButtonExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8Jn-Ht-EOn"/>
+                        <viewControllerLayoutGuide type="bottom" id="Fzy-9L-ABq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d4D-1X-uS6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MlC-xR-f2F">
+                                <rect key="frame" x="208" y="285" width="184" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="XCQ-n8-z3H"/>
+                                    <constraint firstAttribute="width" constant="184" id="aXJ-LJ-4iY"/>
+                                </constraints>
+                                <state key="normal" title="Sign out"/>
+                                <connections>
+                                    <action selector="signOutButtonTapped:" destination="AT8-YX-MiP" eventType="touchUpInside" id="6v6-Zw-12M"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MlC-xR-f2F" firstAttribute="centerX" secondItem="d4D-1X-uS6" secondAttribute="centerX" id="6p7-nK-aZ2"/>
+                            <constraint firstItem="MlC-xR-f2F" firstAttribute="centerY" secondItem="d4D-1X-uS6" secondAttribute="centerY" id="FTB-0i-CXG"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Protected page" id="jQQ-qN-6SE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="be1-ZT-zzF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1520" y="297"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bSi-4v-l6L">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E1D-gp-3ba" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="u91-Rd-SG6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="1T0-8h-c7M"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O6Z-Ez-V1G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="797" y="1028"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bFs-EL-CHT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XZ0-A9-UPC" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tBP-LW-rpi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AT8-YX-MiP" kind="relationship" relationship="rootViewController" id="xHj-3g-hmK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RaQ-Cs-gzj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821" y="297"/>
         </scene>
     </scenes>
 </document>
