--- a/MyGoogleSinginButtonExample/Base.lproj/Main.storyboard
+++ b/MyGoogleSinginButtonExample/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1512" y="1015"/>
+            <point key="canvasLocation" x="1592" y="1028"/>
         </scene>
         <!--Protected page-->
         <scene sceneID="B9T-iw-6fx">
@@ -64,18 +64,30 @@
                                     <action selector="signOutButtonTapped:" destination="AT8-YX-MiP" eventType="touchUpInside" id="6v6-Zw-12M"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Protected Page" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTU-lF-Cs3">
+                                <rect key="frame" x="218" y="92" width="164" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="1Pd-e0-ide"/>
+                                    <constraint firstAttribute="width" constant="164" id="dhB-cV-QMN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.24461866830000001" blue="0.1296188201" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="MlC-xR-f2F" firstAttribute="centerX" secondItem="d4D-1X-uS6" secondAttribute="centerX" id="6p7-nK-aZ2"/>
+                            <constraint firstItem="aTU-lF-Cs3" firstAttribute="centerX" secondItem="d4D-1X-uS6" secondAttribute="centerX" id="86E-iQ-rnc"/>
                             <constraint firstItem="MlC-xR-f2F" firstAttribute="centerY" secondItem="d4D-1X-uS6" secondAttribute="centerY" id="FTB-0i-CXG"/>
+                            <constraint firstItem="aTU-lF-Cs3" firstAttribute="top" secondItem="8Jn-Ht-EOn" secondAttribute="bottom" constant="72" id="lNg-kZ-lOP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Protected page" id="jQQ-qN-6SE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="be1-ZT-zzF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1520" y="297"/>
+            <point key="canvasLocation" x="1625" y="214"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bSi-4v-l6L">
@@ -94,24 +106,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O6Z-Ez-V1G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="797" y="1028"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="bFs-EL-CHT">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XZ0-A9-UPC" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tBP-LW-rpi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="AT8-YX-MiP" kind="relationship" relationship="rootViewController" id="xHj-3g-hmK"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RaQ-Cs-gzj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="821" y="297"/>
         </scene>
     </scenes>
 </document>
